--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML, CSS and JavaScript demo</title>
+  <link rel="stylesheet" href="style.css">
+<title>работа 16</title>
 </head>
 <body>
 <!-- Start your code here -->
-<p class="lw">Пока мама ушла в магазин... <br> Пойду прогуляюсь.</p><h1>
+<p class="lw">Пока мама ушла в магазин... <br> Пойду прогуляюсь.</p>
 <!-- End your code here -->
 </body>
+</html>
